--- a/protfolio/src/components/Navbar/Hero/Hero.css
+++ b/protfolio/src/components/Navbar/Hero/Hero.css
@@ -19,3 +19,29 @@
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
+.hero p{
+    width: 50%;
+    text-align: center;
+    font-size: 24px;
+    line-height: 40px;
+}
+.hero-action{
+    display: flex;
+    align-items: center;
+    gap: 25px;
+    font-size: 24px;
+    font-weight: 500;
+    margin-bottom: 50px;
+}
+.hero-connect{
+    padding: 25px 45px;
+    border-radius: 50px;
+    background: linear-gradient(264deg,#DA7C25 -5.09%,#B923E1 102.06% );
+    cursor: pointer;
+}   
+.hero-resume{
+    padding: 25px;
+    border-radius: 50px;
+    border: 2px soild #fff;
+    cursor: pointer;
+}
