update : the about title under the image applied the css property

--- a/protfolio/src/components/About/About.css
+++ b/protfolio/src/components/About/About.css
@@ -14,3 +14,9 @@
     font-weight: 80px;
     font-weight: 600;
 }
+.about-title img{
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    z-index: -1;
+}
