--- a/protfolio/src/components/About/About.css
+++ b/protfolio/src/components/About/About.css
@@ -60,3 +60,9 @@
     border-radius: 50px;
     background: linear-gradient(264deg,#DA7C25 -5.09%,#B923E1 102.06% );
 }
+.about-achievements{
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
+    margin-bottom: 80px;
+}
