--- a/protfolio/src/components/About/About.css
+++ b/protfolio/src/components/About/About.css
@@ -66,3 +66,30 @@
     justify-content: space-around;
     margin-bottom: 80px;
 }
+.about-achievement{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    transition: 0.5s;
+}
+.about-achievement h1{
+    font-size: 60px;
+    font-weight: 700;
+    background:  linear-gradient(270deg,#DA7C25 -5.09%,#B923E1 102.06% );
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent
+}
+.about-achievement p{
+    font-size: 22px;
+    font-weight: 500;
+}
+.about-skill:hover{
+    transform: scale(1.05);
+    transform: 0.3s;
+}
+.about-achievement:hover{
+    transform: scale(1.12);
+    transform: 0.5s;
+}
