update : heading of my services

--- a/protfolio/src/components/Services/Services.css
+++ b/protfolio/src/components/Services/Services.css
@@ -10,5 +10,13 @@
     position: relative; 
 }
 .services-title h1{
-    
+    padding: 0px 30px;
+    font-size: 80px;
+    font-weight: 600;
+}
+.services-title img{
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    z-index: -1;
 }
