--- a/protfolio/src/components/Contact/Contact.css
+++ b/protfolio/src/components/Contact/Contact.css
@@ -100,6 +100,17 @@
     transform: scale(1.1);
     transition: 0.3s;
 }
+.social-media{
+    display: flex;
+    flex-direction: row;
+    gap: 30px;
+    color: white;
+    font-size: 22px;
+    cursor: pointer;
+}
+.contact-detail img{
+    width: 40px;
+}
 @media(max-width:768px){
     .contact{
         gap: 50px;
@@ -128,7 +139,7 @@
         gap: 20px;
     }
     .contact-detail img{
-        width: 25px;
+        width: 40px;
     }
     .contact-right label{
         font-size: 20px;
