--- a/portfolio/src/components/Contact/Contact.css
+++ b/portfolio/src/components/Contact/Contact.css
@@ -117,7 +117,7 @@
         margin: 50px 70px;
         align-items: start;
     }
-    .contact-title{
+    .contact-title h1{
         padding: 0;
         font-size: 50px;
         font-weight: 600;
