--- a/portfolio/src/components/About/About.css
+++ b/portfolio/src/components/About/About.css
@@ -11,7 +11,7 @@
 }
 .about-title h1{
     padding: 0px 30px;
-    font-weight: 80px;
+    font-size: 50px;
     font-weight: 600;
 }
 .about-title img{
