--- a/portfolio/src/components/Footer/Footer.css
+++ b/portfolio/src/components/Footer/Footer.css
@@ -34,6 +34,8 @@
     font-size: 18px;
 }
 .footer-subscribe{
+    border-radius: none;
+    color: white;
     font-size: 20px;
     padding: 22px 50px;
     border-radius: 50px;
@@ -58,7 +60,7 @@
     transform: scale(1.1);
     transition: 0.3s;
 }
-@media(max-width:768px){
+@media(max-width:440px){
     .footer{
         margin: 50px 70px;
     }
@@ -70,5 +72,16 @@
         display: flex;
         flex-direction: column-reverse;
         margin-bottom: 5px;
+    }
+    .footer-emali-input{
+        width: 200px;
+        margin-left: -10px;
+        
+    }
+    .footer-subscribe{
+        font-size: 20px;
+        padding: 15px 40px;
+        grid-template-columns: 1fr;
+
     }
 }
