--- a/portfolio/src/components/Navbar/Navbar/Navbar.css
+++ b/portfolio/src/components/Navbar/Navbar/Navbar.css
@@ -42,7 +42,7 @@
     display: none;
 }
 @media(max-width:768px){
-    .navbar{
+    .Navbar{
         margin: 20px 50px;
     }
     .nav-connect{
@@ -51,7 +51,7 @@
     .nav-mob-open{
         display: block;
         position: fixed;
-        right: 30px;
+        right: 150px;
     }
     .nav-mob-close{
         display: block;
@@ -67,7 +67,7 @@
         top: 0;
         gap: 30px;
         background-color: #1F0016;
-        width: 350px;
+        width: 480px;
         height: 100%;
         z-index: 2;
         transition:right 0.5s;
