--- a/portfolio/src/components/Footer/Footer.css
+++ b/portfolio/src/components/Footer/Footer.css
@@ -60,7 +60,7 @@
     transform: scale(1.1);
     transition: 0.3s;
 }
-@media(max-width:440px){
+@media(max-width:432px){
     .footer{
         margin: 50px 70px;
     }
@@ -81,6 +81,9 @@
     .footer-subscribe{
         font-size: 20px;
         padding: 15px 40px;
+        display: flex;
+        flex-direction: column;
+        margin-left: -29px;
         grid-template-columns: 1fr;
 
     }
