update : responsive set to 768px

--- a/portfolio/src/components/About/About.css
+++ b/portfolio/src/components/About/About.css
@@ -62,9 +62,10 @@
 }
 .about-achievements{
     display: flex;
-    width: 100%;
+    width: 90%;
     justify-content: space-around;
     margin-bottom: 80px;
+    align-items: center;
 }
 .about-achievement{
     display: flex;
