--- a/portfolio/src/components/Navbar/Navbar/Navbar.css
+++ b/portfolio/src/components/Navbar/Navbar/Navbar.css
@@ -57,7 +57,7 @@
         display: block;
         position: relative;
         top: 28px;
-        left: 250px;
+        left: 230px;
         width: 25px;
     }
     .nav-menu{
@@ -67,7 +67,7 @@
         top: 0;
         gap: 30px;
         background-color: #1F0016;
-        width: 350px;
+        width: 300px;
         height: 100%;
         z-index: 2;
         transition:right 0.5s;
@@ -81,7 +81,7 @@
     }
 }
 
-@media(max-width:1024px){
+/*@media(max-width:1024px){
 
     .Navbar{
         margin: 30px 100px;
@@ -89,14 +89,14 @@
     .nav-mob-open{
         display: block;
         position: fixed;
-        right: 150px;
+        right: 50px;
         width: 50px;
     }
     .nav-mob-close{
         display: block;
         position: relative;
         top: 35px;
-        left: 300px;
+        left: 400px;
         width: 40px;
     }
     .nav-menu{
