--- a/portfolio/src/components/MyWork/MyWork.css
+++ b/portfolio/src/components/MyWork/MyWork.css
@@ -132,7 +132,7 @@
         margin-right: -20px;
     }
     .mywork-container{
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr;
         gap: 30px;
     }
     .mywork-container img{
