--- a/portfolio/src/components/Services/Services.css
+++ b/portfolio/src/components/Services/Services.css
@@ -173,7 +173,7 @@
         width: 20px;
     }
     .services-container{
-        grid-template-columns:1fr 1fr;
+        grid-template-columns:1fr 1fr 1fr;
         gap: 30px;
         
     }
