--- a/portfolio/src/components/Footer/Footer.css
+++ b/portfolio/src/components/Footer/Footer.css
@@ -118,7 +118,7 @@
     }
 }
 
-@media(min-width: 1025px) and (max-width: 1440px) {
+/*@media(min-width: 1025px) and (max-width: 1440px) {
     .footer{
         margin: 50px 70px;
     }
