--- a/portfolio/src/components/Contact/Contact.css
+++ b/portfolio/src/components/Contact/Contact.css
@@ -29,10 +29,11 @@
     flex-direction: column;
     gap: 30px;
 }
-.contact-left h1{
+.contact-left h1 {
     font-size: 80px;
     font-weight: 700;
-    background: linear-gradient(270deg,#DA7C25 -5.09%,#B923E1 102.06%);
+    background: linear-gradient(270deg, #DA7C25 -5.09%, #B923E1 102.06%);
+    background-clip: text; /* Add this for standard compatibility */
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
