--- a/portfolio/src/components/Services/Services.css
+++ b/portfolio/src/components/Services/Services.css
@@ -67,6 +67,26 @@
     transform: scale(1.05);
     transition: 0.4s;
 }
+
+
+.myproject-showmore{
+    display: flex;
+    gap: 15px;
+    border-radius: 50px;
+    border: 2px solid white;
+    padding: 30px 60px;
+    font-size: 22px;
+    font-weight: 500;
+    margin-bottom: 80px;
+    transition: 0.6;
+    cursor: pointer;
+}
+.myproject-showmore:hover{
+    gap: 30px;
+    transition: 0.6s;
+}
+
+
 @media(max-width:640px){
     .services{
         align-items: start;
@@ -101,6 +121,12 @@
         grid-template-columns:1fr;
         gap: 30px;
         
+    }
+    .myproject-showmore{
+        padding: 20px 40px;
+        font-size: 18px;
+        margin: 50px auto;
+        cursor: pointer;
     }
 }
 
@@ -140,6 +166,12 @@
         gap: 30px;
         
     }
+    .myproject-showmore{
+        padding: 20px 40px;
+        font-size: 18px;
+        margin: 50px auto;
+        cursor: pointer;
+    }
 }
 
 @media(min-width: 1025px) and (max-width: 1440px) {
@@ -176,5 +208,11 @@
         grid-template-columns:1fr 1fr 1fr;
         gap: 30px;
         
+    }
+    .myproject-showmore{
+        padding: 20px 40px;
+        font-size: 18px;
+        margin: 50px auto;
+        cursor: pointer;
     }
 }
