--- a/portfolio/src/components/MyWork/MyWork.css
+++ b/portfolio/src/components/MyWork/MyWork.css
@@ -1,4 +1,4 @@
-.mywork{
+/*.mywork{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -145,4 +145,4 @@
         margin: 50px auto;
         cursor: pointer;
     }
-}
+}*/
